[project]
name = "mandelbrot"
requires-python = ">=3.8"
dependencies = [
    "pyperf",
]
urls = {repository = "https://github.com/faster-cpython/..."}
#urls = {repository = "https://github.com/python/pyperformance"}
dynamic = ["version"]

[tool.pyperformance]
name = "mandelbrot"
tags = "apps"
extra_opts = ["loop"]
